--- a/.github/workflows/ssr-win-mxe.yml
+++ b/.github/workflows/ssr-win-mxe.yml
@@ -16,7 +16,7 @@ jobs:
       run: |
         export PKG_PREFIX=mxe-x86-64-w64-mingw32.shared && \
         sudo apt install ${PKG_PREFIX}-cc \
-                          ${PKG_PREFIX}-cmake \
+                          ${PKG_PREFIX}-cmake-conf \
                           ${PKG_PREFIX}-pthreads \
                           ${PKG_PREFIX}-fftw \
                           ${PKG_PREFIX}-libsndfile \
