--- a/.github/workflows/ssr-win-mxe.yml
+++ b/.github/workflows/ssr-win-mxe.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Install pre-build MXE
       run: |
         export PKG_PREFIX=mxe-x86-64-w64-mingw32.shared && \
-        sudo apt install ${PKG_PREFIX}-cc \
+        sudo apt install -y ${PKG_PREFIX}-cc \
                           ${PKG_PREFIX}-cmake-conf \
                           ${PKG_PREFIX}-pthreads \
                           ${PKG_PREFIX}-fftw \
@@ -25,8 +25,8 @@ jobs:
                           ${PKG_PREFIX}-jack
 
     - name: adapt PATH
-      run: export PATH=/usr/lib/mxe/usr/bin:$PATH
+      run: ls /usr/lib/mxe/usr/bin && export PATH=/usr/lib/mxe/usr/bin:$PATH
     - name: CMAKE
-      run: x86_64-w64-mingw32.shared-cmake -S . -B _build/ -DCMAKE_BUILD_TYPE=RELEASE -DVRPN=OFF -DSOFA=OFF ..
+      run: /usr/lib/mxe/usr/bin/x86_64-w64-mingw32.shared-cmake -S . -B _build/ -DCMAKE_BUILD_TYPE=RELEASE -DVRPN=OFF -DSOFA=OFF ..
     - name: BUILD
-      run: x86_64-w64-mingw32.shared-cmake --build ./_build -j4
+      run: /usr/lib/mxe/usr/bin/x86_64-w64-mingw32.shared-cmake --build ./_build -j4
