Copy DLL dependencies

--- a/.github/workflows/windows-msys2.yml
+++ b/.github/workflows/windows-msys2.yml
@@ -86,6 +86,23 @@ jobs:
         working-directory: ssr
         run: |
           make
+      - name: make install
+        working-directory: ssr
+        run: |
+          make install
+      # This is an old shell script for backwards compatibility.
+      # It is not needed on Windows.
+      - name: remove "ssr" script
+        working-directory: ssr/windows-installer
+        run: |
+          rm bin/ssr
+      - name: copy dependencies
+        working-directory: ssr/windows-installer
+        # See https://github.com/msys2/MINGW-packages/issues/5204#issuecomment-1013818547
+        run: |
+          ldd bin/* | grep -iv system32 | grep -v :$  | cut -f2 -d\> | cut -f1 -d\( | while read a; do ! [ -e "bin/`basename $a`" ] && cp -v "$a" bin/ || true; done
+          echo "Remaining dependencies:"
+          ldd bin/*
       - name: make nsis
         working-directory: ssr
         run: |
