--- a/data/nsis/Makefile.am
+++ b/data/nsis/Makefile.am
@@ -11,8 +11,8 @@ if ENABLE_WINDOWS_INSTALLER
 # this is done after installing the executables
 install-exec-hook:
 	for exec in $(SSR_executables); do \
-	  windeployqt --no-compiler-runtime $(DESTDIR)$(bindir)/$$exec \
-	; done
+	  windeployqt --no-compiler-runtime $(DESTDIR)$(bindir)/$$exec ; \
+	done
 	$(RM) -r $(DESTDIR)$(bindir)/styles
 	$(RM) -r $(DESTDIR)$(bindir)/imageformats
 
