--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -6,11 +6,13 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3"
+  jobs:
+    post_checkout:
+      - git fetch --unshallow || true
 
 python:
   install:
     - requirements: doc/manual/requirements.txt
-  system_packages: true
 
 sphinx:
   configuration: doc/manual/conf.py
