--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,8 @@ jobs:
               CXX: clang++-9
               CXXFLAGS: -fno-builtin
           - os: macos-13
+            xcode: Xcode_15.1
+          - os: macos-13
             xcode: Xcode_14.3
           - os: macos-12
             xcode: Xcode_14.2
