--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -98,6 +98,7 @@ jobs:
             websocketpp
           )
           brew install ${PACKAGES[@]}
+          echo CPPFLAGS="-I$(brew --prefix)/include" >> $GITHUB_ENV
           # Link keg-only Qt5
           echo "$(brew --prefix)/opt/qt@5/bin" >> $GITHUB_PATH
           echo PKG_CONFIG_PATH="$(brew --prefix)/opt/qt@5/lib/pkgconfig" >> $GITHUB_ENV
