--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,8 @@ jobs:
               CC: clang-9
               CXX: clang++-9
               CXXFLAGS: -fno-builtin
+          - os: macos-14
+            xcode: Xcode_15.4
           - os: macos-13
             xcode: Xcode_15.1
           - os: macos-13
@@ -96,11 +98,11 @@ jobs:
             websocketpp
           )
           brew install ${PACKAGES[@]}
-          # Link keg-only Qt5 according to homebrew info
-          echo "/usr/local/opt/qt@5/bin" >> $GITHUB_PATH
-          echo LDFLAGS="-L/usr/local/opt/qt@5/lib" >> $GITHUB_ENV
-          echo CPPFLAGS="-I/usr/local/opt/qt@5/include" >> $GITHUB_ENV
-          echo PKG_CONFIG_PATH="/usr/local/opt/qt@5/lib/pkgconfig" >> $GITHUB_ENV
+          echo CPPFLAGS="-I$(brew --prefix)/include" >> $GITHUB_ENV
+          echo LDFLAGS="-L$(brew --prefix)/lib" >> $GITHUB_ENV
+          # Link keg-only Qt5
+          echo "$(brew --prefix)/opt/qt@5/bin" >> $GITHUB_PATH
+          echo PKG_CONFIG_PATH="$(brew --prefix)/opt/qt@5/lib/pkgconfig" >> $GITHUB_ENV
           # Perl module needed for help2man
           #cpan Locale::gettext
       - name: Install compiler
