--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,15 +26,15 @@ jobs:
               CC: clang-9
               CXX: clang++-9
               CXXFLAGS: -fno-builtin
-          - os: macos-15
+          - os: macos-15-arm64 # arm64 only
             xcode: Xcode_16.0
-          - os: macos-14
+          - os: macos-14-arm64 # arm64 only
             xcode: Xcode_16.0
-          - os: macos-13
+          - os: macos-13 # Intel, arm64 available
             xcode: Xcode_15.2
-          - os: macos-13
+          - os: macos-13 # Intel, arm64 available
             xcode: Xcode_14.3.1
-          - os: macos-12
+          - os: macos-12 # Intel only
             xcode: Xcode_14.2
     runs-on: ${{ matrix.os }}
     env: ${{ matrix.env || fromJSON('{}') }}
